--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "@types/three": "^0.132.1",
     "gh-pages": "^3.1.0",
     "lint-staged": "10.5.4",
-    "quicktype": "^15.0.258",
-    "three": "^0.133.0"
+    "quicktype": "^15.0.258"
   },
   "peerDependencies": {
     "@types/three": "^0.131.0",
