--- a/package.json
+++ b/package.json
@@ -46,21 +46,21 @@
     ]
   },
   "dependencies": {
-    "@pixiv/three-vrm-core": "../three-vrm-core",
+    "@pixiv/three-vrm-core": "./three-vrm-core",
     "@pixiv/three-vrm-materials-hdr-emissive-multiplier": "1.0.0-beta.19",
-    "@pixiv/three-vrm-materials-mtoon": "../three-vrm-materials-mtoon",
+    "@pixiv/three-vrm-materials-mtoon": "./three-vrm-materials-mtoon",
     "@pixiv/three-vrm-materials-v0compat": "1.0.0-beta.19",
     "@pixiv/three-vrm-node-constraint": "1.0.0-beta.19",
-    "@pixiv/three-vrm-springbone": "../three-vrm-springbone"
+    "@pixiv/three-vrm-springbone": "./three-vrm-springbone"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@types/three": "^0.140.0",
     "lint-staged": "10.5.4",
-    "three": "../../three"
+    "three": "../three"
   },
   "peerDependencies": {
     "@types/three": "^0.140.0",
-    "three": "../../three"
+    "three": "../three"
   }
 }
