--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
   },
   "dependencies": {
     "@pixiv/three-vrm-core": "./three-vrm-core",
-    "@pixiv/three-vrm-materials-hdr-emissive-multiplier": "1.0.0-beta.19",
+    "@pixiv/three-vrm-materials-hdr-emissive-multiplier": "./three-vrm-materials-hdr-emissive-multiplier",
     "@pixiv/three-vrm-materials-mtoon": "./three-vrm-materials-mtoon",
-    "@pixiv/three-vrm-materials-v0compat": "1.0.0-beta.19",
-    "@pixiv/three-vrm-node-constraint": "1.0.0-beta.19",
+    "@pixiv/three-vrm-materials-v0compat": "./three-vrm-materials-v0compat",
+    "@pixiv/three-vrm-node-constraint": "./three-vrm-node-constraint",
     "@pixiv/three-vrm-springbone": "./three-vrm-springbone"
   },
   "devDependencies": {
